--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
-    "@mui/styles": "^5.14.1",
     "@react-oauth/google": "^0.11.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "emoji-picker-react": "^4.4.10",
     "firebase": "^10.1.0",
     "framer-motion": "^10.13.0",
     "jwt-decode": "^3.1.2",
@@ -20,6 +20,7 @@
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
+    "react-input-emoji": "^5.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.0",
